// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOMManager for disconnected container cases should initialize the expected DOM 1`] = `
<div>
  <div
    class="ag-charts-wrapper ag-charts-styles"
    data-ag-charts=""
    role="presentation"
    style="width: 300px; height: 300px;"
  >
    
    
    <div
      class="ag-charts-tab-guard"
    />
    <div
      class="ag-charts-canvas-center"
      role="presentation"
      style="visibility: hidden;"
    >
      
        
      <div
        class="ag-charts-canvas-container"
        role="presentation"
      >
        
            
        <div
          aria-hidden="true"
          class="ag-charts-canvas-background"
          role="presentation"
        />
        
            
        <div
          aria-hidden="true"
          class="ag-charts-canvas"
          role="presentation"
        />
        
            
        <div
          class="ag-charts-canvas-proxy"
          role="figure"
        >
          
                
          <div
            class="ag-charts-series-area"
            role="presentation"
          />
          
            
        </div>
        
            
        <div
          class="ag-charts-canvas-overlay ag-charts-tooltip-container"
          role="presentation"
        />
        
        
      </div>
      
    
    </div>
    <div
      class="ag-charts-tab-guard"
    />
    

    <style
      data-ag-charts="ag-charts-community"
      nonce="416d1171"
    >
      @import url(./dom/domStyles.css);
@import url(./dom/proxyInteractionStyles.css);
@import url(./dom/focusStyles.css);
@import url(./chart/update/overlaysProcessor.css);
@import url(./chart/interaction/tooltipManager.css);
@import url(./components/popover/popover.css);
@import url(./components/menu/menu.css);
@import url(./components/toolbar/toolbar.css);

    </style>
    <style
      data-ag-charts="test"
      nonce="416d1171"
    >
      .test { width: 100% }
    </style>
  </div>
</div>
`;

exports[`DOMManager for normal container cases should initialize the expected DOM 1`] = `
<div>
  <div
    class="ag-charts-wrapper ag-charts-styles"
    data-ag-charts=""
    role="presentation"
    style="width: 300px; height: 300px;"
  >
    
    
    <div
      class="ag-charts-tab-guard"
    />
    <div
      class="ag-charts-canvas-center"
      role="presentation"
      style="visibility: hidden;"
    >
      
        
      <div
        class="ag-charts-canvas-container"
        role="presentation"
      >
        
            
        <div
          aria-hidden="true"
          class="ag-charts-canvas-background"
          role="presentation"
        />
        
            
        <div
          aria-hidden="true"
          class="ag-charts-canvas"
          role="presentation"
        />
        
            
        <div
          class="ag-charts-canvas-proxy"
          role="figure"
        >
          
                
          <div
            class="ag-charts-series-area"
            role="presentation"
          />
          
            
        </div>
        
            
        <div
          class="ag-charts-canvas-overlay ag-charts-tooltip-container"
          role="presentation"
        />
        
        
      </div>
      
    
    </div>
    <div
      class="ag-charts-tab-guard"
    />
    

  </div>
</div>
`;

exports[`DOMManager for normal container cases should initialize the expected DOM 2`] = `
<head>
  <style
    data-ag-charts="ag-charts-community"
    nonce="416d1177"
  >
    @import url(./dom/domStyles.css);
@import url(./dom/proxyInteractionStyles.css);
@import url(./dom/focusStyles.css);
@import url(./chart/update/overlaysProcessor.css);
@import url(./chart/interaction/tooltipManager.css);
@import url(./components/popover/popover.css);
@import url(./components/menu/menu.css);
@import url(./components/toolbar/toolbar.css);

  </style>
  <style
    data-ag-charts="test"
    nonce="416d1177"
  >
    .test { width: 100% }
  </style>
</head>
`;

exports[`DOMManager for shadow-DOM container cases should initialize the expected DOM 1`] = `
<div>
  <div
    class="ag-charts-wrapper ag-charts-styles"
    data-ag-charts=""
    role="presentation"
    style="width: 300px; height: 300px;"
  >
    
    
    <div
      class="ag-charts-tab-guard"
    />
    <div
      class="ag-charts-canvas-center"
      role="presentation"
      style="visibility: hidden;"
    >
      
        
      <div
        class="ag-charts-canvas-container"
        role="presentation"
      >
        
            
        <div
          aria-hidden="true"
          class="ag-charts-canvas-background"
          role="presentation"
        />
        
            
        <div
          aria-hidden="true"
          class="ag-charts-canvas"
          role="presentation"
        />
        
            
        <div
          class="ag-charts-canvas-proxy"
          role="figure"
        >
          
                
          <div
            class="ag-charts-series-area"
            role="presentation"
          />
          
            
        </div>
        
            
        <div
          class="ag-charts-canvas-overlay ag-charts-tooltip-container"
          role="presentation"
        />
        
        
      </div>
      
    
    </div>
    <div
      class="ag-charts-tab-guard"
    />
    

    <style
      data-ag-charts="ag-charts-community"
      nonce="416d1177"
    >
      @import url(./dom/domStyles.css);
@import url(./dom/proxyInteractionStyles.css);
@import url(./dom/focusStyles.css);
@import url(./chart/update/overlaysProcessor.css);
@import url(./chart/interaction/tooltipManager.css);
@import url(./components/popover/popover.css);
@import url(./components/menu/menu.css);
@import url(./components/toolbar/toolbar.css);

    </style>
    <style
      data-ag-charts="test"
      nonce="416d1177"
    >
      .test { width: 100% }
    </style>
  </div>
</div>
`;
